[package]
name = "newnit"
version = "0.1.0"
edition = "2024"
description = "A rich newtype library for units of quantity."
repository = "https://github.com/matej-almasi/newnit/newnit"
readme = "README.MD"
license = "MIT OR Apache-2.0"
keywords = ["newtype", "unit", "quantity", "measurement", "physics"]

[dependencies]
newnit_derive = { version = "0.1.0", path = "../newnit_derive" }
serde = { version = "1.0", optional = true, features = ["derive"] }
